<resources>
    <string name="app_name">2014141004_Gallery</string>
    <string name="app_name2">명화</string>


    <string name="title01">Starry Night</string>
    <string name="artist01">고흐</string>
    <string name="picture01">starry_night</string>

    <string name="title02">Still Life with Kettle</string>
    <string name="artist02">폴 세잔</string>
    <string name="picture02">still_life_with_kettle</string>

    <string name="title03">Crying Lady</string>
    <string name="artist03">피카소</string>
    <string name="picture03">crying_lady</string>

    <string name="title04">Screaming</string>
    <string name="artist04">몽크</string>
    <string name="picture04">screaming</string>

</resources>