<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">
<!--
onClick을 하면 clickable true값을 줘야한다
tag값은 별명같은 것이다 id는 실제 이름
wrap_content : 뷰에들어있는 내용물의 크기에 자동으로 크기가 맞춰 집니다.
match_parent: 뷰그룹의 여유 공간을 꽉 채워 줍니다.
-->
    <LinearLayout
        android:id="@+id/item01"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:clickable="true"
        android:onClick="disPlayPicture"
        android:orientation="horizontal"
        android:tag="01">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/starry_night"
            tools:srcCompat="@drawable/starry_night" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title01" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist01" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item02"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:onClick="disPlayPicture"
        android:orientation="horizontal"
        android:clickable="true"
        android:tag="02">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="93dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/still_life_with_kettle"
            tools:srcCompat="@drawable/still_life_with_kettle" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title02" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist02" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item03"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:onClick="disPlayPicture"
        android:clickable="true"
        android:orientation="horizontal"
        android:tag="03">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="155dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/crying_lady"
            tools:srcCompat="@drawable/crying_lady" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title03" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist03" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item04"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:onClick="disPlayPicture"
        android:clickable="true"
        android:orientation="horizontal"
        android:tag="04">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="157dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/screaming"
            tools:srcCompat="@drawable/screaming" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title04" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist04" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>